ZMCIntegral/complex/complex.124980.err
  File "./complex-no-cuda.py", line 15
    def f_real(y[0], y[1]):
                ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
